# fast-obsidian-mcp

obsidian-remote-mcp/: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
obsidian-remote-mcp/.github/workflows/: ci.yml
obsidian-remote-mcp/src/obsidian_remote_mcp/: __init__.py  paths.py  search.py  security.py  server.py  tags.py
obsidian-remote-mcp/tests/: test_paths.py  test_server_http_app.py  test_server_smoke.py  test_tags.py
